Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-59689

Crash when printing

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.11.1
    • 5.8.0, 5.9
    • GUI: Printing
    • Windows 10 64 bit
      MSVC2013 64 bit
      Using the same Qt version built with MSVC2015 32 bit does _not_ crash
    • 7aaa7debc455516cbb1b1f536e990b9154272f64 (qtbase/5.11, 23.5.2018,5.11.1), 43ed09fed59d55a8792fad87ef9a75382b5c60ff (qtbase/5.9, 24.9.2018, 5.9.8)

      1. Run the Text Edit example.
        It's in Examples\Qt-5.9\widgets\richtext\textedit\textedit.pro
      2. Select "File" -> "Print..." from the menu.
      3. In the native print-dialog, click "Print" (or whatever it might show to you).
        The example crashes:
        1   hpc6r186                                                    0x7ffc836018cf 
        2   DllGetClassObject               hpc6r186                    0x7ffc8360a5a1 
        3   DllGetClassObject               hpc6r186                    0x7ffc8360a047 
        4   DrvQueryDriverInfo              unidrv                      0x7ffc9bba5f72 
        5   GdiPrinterThunk                 gdi32full                   0x7ffcab6fb5a0 
        6   CheckRadioButton                USER32                      0x7ffcae0c1a4a 
        7   KiUserCallbackDispatcher        ntdll                       0x7ffcae669c54 
        8   NtGdiStretchBlt                 win32u                      0x7ffcab5616c4 
        9   StretchBlt                      gdi32full                   0x7ffcab6b9d69 
        10  StretchBlt                      GDI32                       0x7ffcadcf30a0 
        11  QWin32PrintEngine::drawPixmap   qprintengine_win.cpp   597  0x7ffc92fef36f 
        12  QPainter::drawPixmap            qpainter.cpp           5253 0x7ffc751cd9d3 
        13  QPicture::exec                  qpicture.cpp           739  0x7ffc74f09949 
        14  QPicture::play                  qpicture.cpp           440  0x7ffc74f078f9 
        15  QPainter::drawPicture           qpainter.cpp           6794 0x7ffc751ccd6d 
        16  QPainter::drawPicture           qpainter.h             929  0x7ffc74da4fa5 
        17  QPainter::drawPicture           qpainter.h             924  0x7ffc74da4ffd 
        18  QAlphaPaintEngine::flushAndInit qpaintengine_alpha.cpp 335  0x7ffc92fc6b16 
        19  QWin32PrintEngine::newPage      qprintengine_win.cpp   218  0x7ffc92ff1c5c 
        20  QPrinter::newPage               qprinter.cpp           1846 0x7ffc92fd93f1 
        ... <Mehr>                                                                     
        

      Printing should not crash the calling program.

        1. backtrace.txt
          19 kB
        2. qtdiag.txt
          6 kB
        3. qtdiag.txt
          12 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            johnlayt John Layt
            rlohning Robert Löhning
            Votes:
            3 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes